# myrp

./: Cargo.toml  build_uf2.sh  memo.md  memory.x
.cargo/: config.toml
src/: main.rs
